--- a/_config.yml
+++ b/_config.yml
@@ -31,18 +31,18 @@ url: "https://alpagotchi.github.io"
 github:
   username: Alpagotchi # change to your github username
 
-# twitter:
-  # username: twitter_username # change to your twitter username
+twitter:
+  username: # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
   name: Tim
-  email: example@domain.com # change to your email address
+  email: alpagotchi@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-     # - https://twitter.com/username # change to your twitter homepage
     - https://github.com/SirTimme # change to your github homepage
+    # - https://twitter.com/username # change to your twitter homepage    
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
     # - https://www.linkedin.com/in/username
@@ -73,7 +73,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: https://avatars.githubusercontent.com/u/130458159?s=200&v=4
+avatar: https://avatars.githubusercontent.com/u/130458159
 
 # boolean type, the global switch for TOC in posts.
 toc: true
