--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -3,8 +3,9 @@
 - type: github
   icon: "fab fa-github"
 
-# - type: twitter
-  # icon: "fab fa-twitter"
+- type: discord
+  icon: 'fab fa-discord'
+  url: 'https://discord.gg/DXtYyzGhXR'
 
 - type: email
   icon: "fas fa-envelope"
